--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.6",
     "next": "12.0.4",
